--- a/style.css
+++ b/style.css
@@ -8,14 +8,18 @@
 
 #title {
     background: yellow;
-    /*add CSS here*/
-    
+    margin:20px 20px 20px 20px;
+    padding:20px;
 }
 
 #subtitle {
     background: black;
     color: white;
-    /*add CSS here*/
+    margin:20px;
+    padding-top:20px;
+    padding-top:20px;
+    padding-top:20px;
+    padding-top:20px;
     
 }
 
