--- a/style.css
+++ b/style.css
@@ -7,25 +7,34 @@
 }
 
 #title {
-    background: yellow;
-    margin:20px 20px 20px 20px;
-    padding:20px;
+    background:yellow;
+    margin:20px 90px 20px 90px;
+    padding-top:20px;
+    padding-left:50px;
+    padding-right:50px;
+    padding-bottom:20px;
 }
 
 #subtitle {
     background: black;
     color: white;
-    margin:20px;
-    padding-top:20px;
-    padding-top:20px;
-    padding-top:20px;
-    padding-top:20px;
+    margin:20px 90px 20px 90px;
+    padding-top:2px;
+    padding-right:50px;
+    padding-left:50px;
+    padding-bottom: :20px;
     
 }
 
 .topic {
     background: lightgray;
-    /*add CSS here*/
+    display:inline-block;
+    margin:50px 65px 40px 30px;
+    padding-top:2px;
+    padding-bottom:3px;
+    padding-left:3px;
+    padding-right:3px; 
+    
     
 }
 
