--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
 
 #title {
     background:yellow;
-    margin:20px 90px 20px 90px;
-    padding-top:20px;
+    margin:20px 110px 20px 110px;
+    padding:20px 50px 50px 20px;
     padding-left:50px;
     padding-right:50px;
     padding-bottom:20px;
@@ -18,23 +18,18 @@
 #subtitle {
     background: black;
     color: white;
-    margin:20px 90px 20px 90px;
+    margin:20px 110px 20px 110px;
     padding-top:2px;
     padding-right:50px;
     padding-left:50px;
-    padding-bottom: :20px;
+    padding-bottom:20px;
     
 }
 
 .topic {
     background: lightgray;
     display:inline-block;
-    margin:50px 65px 40px 30px;
-    padding-top:2px;
-    padding-bottom:3px;
-    padding-left:3px;
-    padding-right:3px; 
-    
-    
+    margin:50px 111px 40px 111px;
+    padding:4px;
 }
 
